# prenderer

./: .gitignore  CMakeLists.txt  README.md  gitInstructions.txt  prenderer.sln  settings.csv
models/robot-v2/: robot-v2.jbin
models/robot_hand/: robot_hand.jbin
prenderer/: CMakeLists.txt  prenderer.vcxproj  prenderer.vcxproj.filters
prenderer/headers/app/: app.h
prenderer/src/app/: app.cpp
prenderer/src/main/: main.cpp
utilities/: eigen_vectors_test.m  hud_drawings.ppt  rot_mat.m  spin_calc.m
